[gd_scene load_steps=7 format=3 uid="uid://bq2mi31vh824u"]

[ext_resource type="Script" uid="uid://ckwms6hu7db6t" path="res://after_stage.gd" id="1_4ocfc"]
[ext_resource type="Texture2D" uid="uid://b7ipf2j260boq" path="res://asset/art/MainMenu.png" id="2_al5sk"]
[ext_resource type="Texture2D" uid="uid://caifnlfmelihq" path="res://asset/art/Replay_BTN.png" id="3_nj2d6"]
[ext_resource type="Texture2D" uid="uid://dnx6eea75arr6" path="res://asset/art/Menu_BTN.png" id="4_1slea"]
[ext_resource type="Texture2D" uid="uid://dhwxrqfrtiwaf" path="res://asset/art/Forward_BTN.png" id="5_tc1uy"]
[ext_resource type="Texture2D" uid="uid://diii5jybxtthr" path="res://asset/art/Star_03.png" id="6_kk7r6"]

[node name="After_Stage" type="Node2D"]
script = ExtResource("1_4ocfc")

[node name="Main_Menu_BG" type="TextureRect" parent="."]
offset_right = 1080.0
offset_bottom = 1920.0
texture = ExtResource("2_al5sk")

[node name="ResultLabel" type="Label" parent="."]
offset_left = 81.0
offset_top = 350.0
offset_right = 989.0
offset_bottom = 542.0
theme_override_font_sizes/font_size = 120

[node name="back_main_Mmenu_placeholder" type="Button" parent="."]
offset_left = 24.0
offset_top = 1073.0
offset_right = 122.0
offset_bottom = 1201.0
scale = Vector2(3, 3)
size_flags_vertical = 8
icon = ExtResource("3_nj2d6")

[node name="mode_select_placeholder" type="Button" parent="."]
offset_left = 330.0
offset_top = 1137.0
offset_right = 548.0
offset_bottom = 1368.0
icon = ExtResource("4_1slea")

[node name="NextStageButton" type="Button" parent="."]
offset_left = 837.0
offset_top = 1137.0
offset_right = 1055.0
offset_bottom = 1355.0
icon = ExtResource("5_tc1uy")

[node name="Replay_placeholder" type="Button" parent="."]
offset_left = 544.0
offset_top = 1049.0
offset_right = 642.0
offset_bottom = 1181.0
scale = Vector2(3, 3)
icon = ExtResource("3_nj2d6")

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 350.0
offset_top = 504.0
offset_right = 764.0
offset_bottom = 573.0
theme_override_font_sizes/font_size = 50

[node name="medal_star_placeholder" type="TextureRect" parent="."]
offset_left = 111.0
offset_top = 639.0
offset_right = 403.0
offset_bottom = 919.0
texture = ExtResource("6_kk7r6")

[node name="medal_star_placeholder2" type="TextureRect" parent="."]
offset_left = 424.0
offset_top = 639.0
offset_right = 716.0
offset_bottom = 919.0
texture = ExtResource("6_kk7r6")

[node name="medal_star_placeholder3" type="TextureRect" parent="."]
offset_left = 730.0
offset_top = 639.0
offset_right = 1022.0
offset_bottom = 919.0
texture = ExtResource("6_kk7r6")

[connection signal="pressed" from="back_main_Mmenu_placeholder" to="." method="_on_back_main_mmenu_placeholder_pressed"]
[connection signal="pressed" from="mode_select_placeholder" to="." method="_on_mode_select_placeholder_pressed"]
[connection signal="pressed" from="NextStageButton" to="." method="_on_next_stage_button_pressed"]
[connection signal="pressed" from="Replay_placeholder" to="." method="_on_replay_placeholder_pressed"]
